# my_rss_app

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  DEPLOY.md  DEPLOYMENT_CHECKLIST.md  Dockerfile  QUICKSTART.md  README.md  config.json  feed.xml  fly.toml  fly.toml.example  history.json  import_data.py  main.py  process_rss.py  pyproject.toml  read_rss.py  requirements.txt  rss.txt  run-local.ps1  start-local.ps1  start.sh  test_history.json
app/: config.yaml  fetcher.py  logger.py  rss_generator.py
data/: feed.xml  feed_new.xml
docs/: CHANGES.md  STRUCTURE.md
src/: config.yaml  main.py  process_rss.py  webserver.py
src/core/: agent_post_facebook.py  fetcher.py  rss_generator.py
tests/: test_fetcher.py  test_server.py
